Mentés betöltés megvalósítása jsonban (a teszt most minden esetet figyel)